--- a/instances/ibm-sfg-b2bi-prod/values.yaml
+++ b/instances/ibm-sfg-b2bi-prod/values.yaml
@@ -36,7 +36,11 @@ ibm-sfg-prod:
     fsGroup: 1010
     runAsUser: 1010
   dataSetup:
-    enabled: true
+
+    # BEGIN
+    enabled: false
+    # END
+
     upgrade: false
   env:
     tz: "UTC"
@@ -64,7 +68,11 @@ ibm-sfg-prod:
     dbPort: 50000
     dbData: B2BIDB
     dbDrivers: db2jcc4.jar
-    dbCreateSchema: true
+
+    # BEGIN
+    dbCreateSchema: false
+    # END
+
     # Name of DB secret
     dbSecret: b2b-db-secret
     #Provide the admin email address
