--- a/instances/sterling-secure-proxy-configuration-manager/values.yaml
+++ b/instances/sterling-secure-proxy-configuration-manager/values.yaml
@@ -61,7 +61,7 @@ ibm-ssp-cm:
 
   # Manage PV directory using Supplemental Group ID if needed.
   storageSecurity:
-    supplementalGroupId: "1000660001"
+    supplementalGroupId: ""
 
   # Specify these fields for Services
   service:
