--- a/ssp-instance/kustomization.yaml
+++ b/ssp-instance/kustomization.yaml
@@ -1,12 +1,24 @@
 resources:
-- ssp-init/ssp-cm-secret.yaml
-- ssp-init/ssp-cm-crb.yaml
-- ssp-init/ssp-cm-rb.yaml
-- ssp-init/ssp-engine-secret.yaml
-- ssp-setup/ssp-cm-pvc.yaml
-- ssp-setup/ssp-engine-pvc.yaml
+- ssp-init/cm/cm-secret.yaml
+- ssp-init/cm/cm-crb.yaml
+- ssp-init/cm/cm-rb.yaml
+- ssp-setup//cm/cm-pvc.yaml
+- ssp-setup//cm/cm-scc.yaml
+
+- ssp-init/engine/engine-secret.yaml
+- ssp-init/engine/engine-cr-scc.yaml
+- ssp-init/engine/engine-cr.yaml
+- ssp-init/engine/engine-psp.yaml
+- ssp-init/engine/engine-pvc.yaml
+- ssp-init/engine/engine-crd.yaml
+- ssp-init/engine/engine-rb.yaml
+- ssp-init/engine/engine-scc.yaml
+
+- ssp-init/ps/ps-rb.yaml
+- ssp-init/ps/ps-scc.yaml
+
+- ssp-setup/engine/engine-pvc.yaml
 - ssp-setup/keycert-hook-roles.yaml
 - ssp-setup/keycert-hook-job.yaml
 - ssp-setup/keycert-hook-rb.yaml
-- ssp-cm/values.yaml
-- ssp-ep/values.yaml
+
