--- a/ssp-instance/ssp-init/cm/cm-scc.yaml
+++ b/ssp-instance/ssp-init/cm/cm-scc.yaml
@@ -1,10 +1,12 @@
 apiVersion: security.openshift.io/v1
 kind: SecurityContextConstraints
 metadata: 
-  name: ibm-ssp-engine-scc
+  annotations:
+    argocd.argoproj.io/sync-wave: "202"
+  name: ibm-ssp-cm-scc
   labels:
-    app.kubernetes.io/name: ibm-ssp-engine-scc
-    app.kubernetes.io/instance: ibm-ssp-engine-scc
+    app.kubernetes.io/name: ibm-ssp-cm-scc
+    app.kubernetes.io/instance: ibm-ssp-cm-scc
     app.kubernetes.io/managed-by: IBM
 allowHostDirVolumePlugin: false
 allowHostIPC: false
